For 1.16:
	- VisibilitySensor

	- bug in DirectionalLight rend fixed.

	- bug in script invocation - scripts are now initiated when routing entries
	  are made, not when first invoked.

	- H-Anim nodes being worked on.

	- Geometry2D nodes complete.

	- streamlining build and rendering process by reducing amount of C code in
	  VRMLRend.pm and VRMLC.pm

	- bug in IndexedFaceSet rendering fixed - degenerate triangle finding changed
	  so that all triangles are looked at in a face, and the one with the longest
	  vector length is the one chosen to represent the normal of that face.

	- re-arranged the CFuncs directory to better follow X3D Spec.

	- added nodes to the "topNodes" field - some warnings were printed for correct
	  scenegraphs pertaining to what nodes were allowed as root nodes.

	- reworked texture coordinates for Extrusion and ElevationGrid to handle Multi
	  Texture nodes (MultiTextureTransform, TextureCoordinateGenerator, etc...)

	- New nodes: 
		- TextureCoordinateGenerator node.
		- StaticGroup node.
		- TextureBackground node.
		- LoadSensor node. (has problems with Scripts)

	- EAI complete.



For 1.15:
	- Fixed dynamic linker bug with OSX 10.4.3

	- removed get3 and get2 method calls, leading to better error messages when
	  unexpected children are found in VRML code.

	- tagged all nodes with a unique type identifier, leading to better error
	  messaging at runtime for code with generated nodes.
	
	- MultiTextureTransform node support.

	- Sphere solid flag now works.

	- "Endian" bug fixed in Binding stack code.

	- collision turned off by default as it affected conformance; some of the
	  Web3D Interchange profile conformance tests assumed that the viewpoint was
	  within a primitive shape.

	- IndexedLineSet, LineSet, and PointSet  nodes up to spec compliance.

	- MultiTexture node support.

	- Ambient intensity light bug fixed.

	- X3D - duplicate DEFs now flagged.

	- parse META, PROFILE, COMPONENT in VRML encoded X3D files.
