@@ -41,18 +41,6 @@ COPIER => "/bin/cp",
 # allow freewrl to play many, many types of sound files; eg, AIFF, etc.
 SOUNDCONV => "/usr/bin/sox",
 
-#
-# WARNINGS => "high" or "medium" or "low" to turn on gcc compiler warnings
-#
-#   high: medium + -Wunreachable-code -Wshadow -Wcast-align
-#   medium: low + -W -Wpointer-arith -Wconversion -Wbad-function-cast
-#                 -Wcast-qual -Wfloat-equal
-#   low: -Wall -Wundef -Wsign-compare -Wmissing-prototypes -Wmissing-declarations
-#
-# WARNINGS => "off" to turn off user supplied gcc compiler warnings
-
-   WARNINGS => "off",
-
 # BOUNDS_CHECK => "on" to turn on bounds checking
 #  (requires gcc compiled with the bounds checking extension)
 # BOUNDS_CHECK => "off" to turn off bounds checking
