@@ -20,23 +20,6 @@
 BIN_DIR => "$PPREFIX/bin",
 LIB_DIR => "$PPREFIX/lib",
 
-#
-# WARNINGS => "high" or "medium" or "low" to turn on gcc compiler warnings
-#
-#   high: medium + -Wunreachable-code -Wshadow -Wcast-align
-#   medium: low + -W -Wpointer-arith -Wconversion -Wbad-function-cast
-#                 -Wcast-qual -Wfloat-equal
-#   low: -Wall -Wundef -Wsign-compare -Wmissing-prototypes -Wmissing-declarations
-#
-# WARNINGS => "off" to turn off user supplied gcc compiler warnings
-
-   WARNINGS => "low",
-
-# DEBUG => "on" to turn on debugging (currently only for JS engine)
-# DEBUG => "off" to turn off debugging
-
-    DEBUG => "on",
-
 # BOUNDS_CHECK => "on" to turn on bounds checking
 #  (requires gcc compiled with the bounds checking extension)
 # BOUNDS_CHECK => "off" to turn off bounds checking
